# factoryplan-rust

./: .gitignore  README.md  TRANSFER_PROTOCOL.md  dev.sh  start-dev.bat  stop-dev.bat  updates for factory plan rust.md
backend/: .gitignore  Cargo.toml  factoryplan.db-shm  factoryplan.db-wal
backend/migrations/: 0001_initial.sql  0002_factory_bay_count.sql  0003_agent.sql  0004_serials.sql  0005_rollforward.sql  0006_product_factory_lead_time.sql  0007_product_factory_allocation.sql  0008_factory_changeover_days.sql
backend/src/: db.rs  error.rs  main.rs  models.rs  recommendations.rs  scheduling.rs
backend/src/handlers/: agent.rs  demand.rs  factories.rs  import_export.rs  mod.rs  products.rs  runs.rs  scenarios.rs
docs/: AGENT_PLAN.md  ASK_AGENT_FEATURE.md  DEPLOYMENT.md  EXCEL_IMPORT.md  PLAN.md
docs/explainer/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/explainer/src/: App.tsx  globals.css  main.tsx
docs/explainer/src/components/: ChatDemo.tsx  CodeBlock.tsx  FlowStepper.tsx  Nav.tsx  PromptLayers.tsx  ui.tsx
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: index.ts
frontend/src/components/: AgentChat.tsx  BacklogView.tsx  BayRequirementsView.tsx  DemandEditor.tsx  ErrorBoundary.tsx  FactoryEditor.tsx  GanttView.tsx  HeadcountView.tsx  ProductEditor.tsx  RecommendationPanel.tsx  ReportView.tsx  RunView.tsx  ScenarioSwitcher.tsx  ShipmentSummary.tsx  UnshippableList.tsx
frontend/src/types/: index.ts
(+13 files in other folders)
